logout route created

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,9 +15,12 @@
             <li><a href="{{ url_for('about') }}">About</a></li>
              <li><a href="{{ url_for('secure_page') }}">Secure Page</a></li>
           </ul>
-
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="{{ url_for('login') }}">Login</a></li>
+            {% if not current_user.is_authenticated %}
+              <li><a href="{{ url_for('login') }}">Login</a></li>
+            {% else %}
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
